--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ numpy==1.13.3
 olefile==0.44
 Pillow==4.3.0
 protobuf==3.5.0.post1
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 PyWavelets==0.5.2
